--- a/Matterhorn/lang/ilias_en.lang
+++ b/Matterhorn/lang/ilias_en.lang
@@ -32,7 +32,9 @@ cancel#:#Cancel
 edit#:#Edit
 status#:#Status
 offline#:#Offline
-matterhorn_plugin_configuration#:#Exampl Plugin Configuration
-setting_1#:#Setting 1
-setting_2#:#Setting 2
-saving_invoked#:#Save procedure has been executed. Please note that this example does not save anything to DB.
+matterhorn_plugin_configuration#:#Matterhorn Plugin Configuration
+mh_server#:#Base URL of the Matterhorn Server
+mh_digest_user#:#Username of the Matterhorn Digest User
+mh_digest_password#:#Password of the Matterhorn Digest User
+xsendfile_basedir#:#Base directory for XSendfile
+saving_invoked#:#Save procedure has been executed
