Added updating series information on matterhorn Added storing of lectureID

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -20,6 +20,7 @@ properties#:#Eigenschaften
 edit_properties#:#Eigenschaften bearbeiten
 title#:#Titel
 description#:#Beschreibung
+lectureID#:#Vorlesungsnummer
 save#:#Speichern
 cancel#:#Abbrechen
 edit#:#Bearbeiten
