--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -16,7 +16,7 @@ xmh_delete#:#Delete Matterhorn Object l&ouml;schen
 xmh_visible#:#Matterhorn Object ist schichtbar
 xmh_edit_permission#:#Rechteverwaltung
 content#:#Inhalt
-viewmode#:#Kompakte &Uubersichtsseite verwenden
+viewmode#:#Kompakte Übersichtsseite verwenden
 properties#:#Eigenschaften
 edit_properties#:#Eigenschaften bearbeiten
 title#:#Titel
