--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -56,3 +56,13 @@ startdate#:#Start date
 enddate#:#End date
 location#:#Location
 none_scheduled#:#There are no scheduled recordings for this series
+
+keep_left_side#:#Left side flavor
+keep_right_side#:#Right side flavor
+ilias_trim_editor#:#Trim editor
+trimin#:#Trim in
+trimout#:#Trim out
+continue#:#Continue
+download_preview#:#Download preview
+onhold_recordings#:#Recording waiting for trimming
+recorddate#:#Date of recording
