Added download links

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -56,3 +56,4 @@ startdate#:#Start date
 enddate#:#End date
 location#:#Location
 none_scheduled#:#There are no scheduled recordings for this series
+download#:#Download
