--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -56,3 +56,17 @@ startdate#:#Startzeit
 enddate#:#Endzeit
 location#:#Aufzeichungsort
 none_scheduled#:#Es sind keine Aufzeichnungen geplant
+
+
+download#:#Download
+keep_left_side#:#Videotyp linkes Video
+keep_right_side#:#Videotyp rechts Video
+ilias_trim_editor#:#Videoeditor
+trimin#:#Startzeitpunkt
+trimout#:#Endzeitpunkt
+continue#:#Weiter
+download_preview#:#Vorschau herrunterladen
+onhold_recordings#:#Aufzeichungen, die geschnitten werden können
+recorddate#:#Datum der Aufnahme
+none_onhold#:#Es gibt keine Aufnahmen, die geschnitten werden können
+msg_episode_trimmed#:#Die Aufnahme wurde erfolgreich geschnitten
