--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -41,6 +41,7 @@ mh_server#:#Basis URL des Opencast Server
 mh_server_engage#:#Basis URL des Opencast Engage Server
 mh_digest_user#:#Benutzername des Opencast Digest User
 mh_digest_password#:#Passwort des Opencast Digest User
+mh_files_directory#:#Basisverzeichnis f&uuml;r Opencast Dateien
 xsendfile_basedir#:#Basisverzeichnis f&uuml;r XSendfile
 matterhorn_version#:#Opencast Version (1.6 nicht verändern)
 saving_invoked#:#&Auml;nderungen erfolgreich gespeichert
