--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -42,6 +42,7 @@ mh_server_engage#:#Base URL of the Opencast Engage Server
 mh_digest_user#:#Username of the Opencast Digest User
 mh_digest_password#:#Password of the Opencast Digest User
 xsendfile_basedir#:#Base directory for XSendfile
+mh_files_directory#:#Base directory for Opencast files
 opencast_version#:#Opencast Version (Don't Change 1.4)
 saving_invoked#:#Save procedure has been executed
 
