Added upload and display of currently processing episodes

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -79,3 +79,13 @@ inpoint#:#Inpoint
 outpoint#:#outpoint
 preview_inpoint#:#Play track from inpoint
 preview_outpoint#:#Play track to out outpoint
+
+processing#:#Processing on Server
+no_processing#:#There are no recordings processing on the server
+add_new_episode#:#Upload a new recording
+track_presenter#:#Name of the presenter
+track_date#:#Date of the recording
+track_time#:#Time of the recording
+add_file#:#Add file
+upload_file#:#Upload file
+no_files#:#Please select a file to upload
