--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -80,3 +80,13 @@ inpoint#:#Startpunkt
 outpoint#:#Endpunkt
 preview_inpoint#:#Abspiel ab Schnittmarke
 preview_outpoint#:#Abspielen bis Schnittmarke
+
+processing#:#Aufzeichnungen, welche vom Server verarbeitet werden
+no_processing#:#Es gibt keine Aufnahmen, die aktuell vom Server verarbeitet werden
+add_new_episode#:#Aufzeichnung hochladen
+track_presenter#:#Name des Vortragenden
+track_date#:#Datum der Aufzeichnung
+track_time#:#Uhrzeit der Aufzeichung
+add_file#:#Datei auswählen
+upload_file#:#Datei hochladen
+no_files#:#Bitte Datei zum Hochladen auswählen
