--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -90,6 +90,6 @@ add_new_episode#:#Aufzeichnung hochladen
 track_presenter#:#Name des Vortragenden
 track_date#:#Datum der Aufzeichnung
 track_time#:#Uhrzeit der Aufzeichung
-add_file#:#Datei auswählen
+select_file#:#Datei auswählen
 upload_file#:#Datei hochladen
 no_files#:#Bitte Datei zum Hochladen auswählen
