--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -51,6 +51,7 @@ finished_recordings#:#Finished Recordings
 preview#:#Preview
 date#:#Date
 action#:#Action
+delete#:#Delete
 none_finished#:#There are no finished recordings yet
 
 scheduled_recordings#:#Scheduled Recordings
