Split manage page in 4 subpages. Closes #15.

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -60,6 +60,7 @@ enddate#:#Endzeit
 location#:#Aufzeichnungsort
 none_scheduled#:#Es sind keine Aufzeichnungen geplant
 
+processtrim#:#Aufzeichnungen bearbeiten
 
 download#:#Download
 keep_left_side#:#Linkes Video behalten
