Add checkbox to enable triming during upload. Fixes #7

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -94,4 +94,5 @@ track_date#:#Date of recording
 track_time#:#Time of recording
 add_file#:#Add file
 upload_file#:#Upload file
+usetrimeditor#:#Trim video
 no_files#:#Please select a file to upload
