--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -94,4 +94,5 @@ track_date#:#Datum der Aufzeichnung
 track_time#:#Uhrzeit der Aufzeichnung
 add_file#:#Datei auswählen
 upload_file#:#Datei hochladen
+usetrimeditor#:#Video schneiden
 no_files#:#Bitte Datei zum Hochladen auswählen
