Improve canceling of uploades, Fixes #11

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -98,3 +98,5 @@ usetrimeditor#:#Video schneiden
 no_files#:#Bitte Datei zum Hochladen auswählen
 uploading#:#Hochladen...
 done_uploading#:#Hochladen erfolgreich
+upload_canceled#:#Hochladen abgebrochen
+cancel_upload#:#Hochladen abbrechen
