--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -88,7 +88,7 @@ progress#:#Verarbeitungsfortschritt
 processing#:#Aufzeichnungen, die vom Server verarbeitet werden
 running#:#Verarbeitungsschritt
 none_processing#:#Es gibt keine Aufnahmen, die aktuell vom Server verarbeitet werden
-add_new_episode#:#Aufzeichnung hochladen
+add_new_episode#:#Eigene Aufzeichnung hochladen
 track_presenter#:#Name des Vortragenden
 track_date#:#Datum der Aufzeichnung
 track_time#:#Uhrzeit der Aufzeichnung
