--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -92,7 +92,7 @@ add_new_episode#:#Eigene Aufzeichnung hochladen
 track_presenter#:#Name des Vortragenden
 track_date#:#Datum der Aufzeichnung
 track_time#:#Uhrzeit der Aufzeichnung
-add_file#:#Datei auswählen
+select_file#:#Datei auswählen
 upload_file#:#Datei hochladen
 usetrimeditor#:#Video schneiden
 no_files#:#Bitte Datei zum Hochladen auswählen
