--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -92,7 +92,7 @@ add_new_episode#:#Upload own recording
 track_presenter#:#Presenter name
 track_date#:#Date of recording
 track_time#:#Time of recording
-add_file#:#Add file
+select_file#:#Select file
 upload_file#:#Upload file
 usetrimeditor#:#Trim video
 no_files#:#Please select a file to upload
