--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -74,6 +74,7 @@ onhold_recordings#:#Aufzeichnungen, die geschnitten werden können
 recorddate#:#Datum der Aufnahme
 none_onhold#:#Es gibt keine Aufnahmen, die geschnitten werden können
 msg_episode_send_to_triming#:#Die Aufnahme wurde erfolgreich zur Weiterverarbeitung geschickt
+msg_scheduling_deleted#:#Die geplante Aufzeichnung wurde erfolgreich gelöscht
 track_title#:#Titel der Aufzeichnung
 flavor_unset#:#Typ unbekannt
 flavor_presenter#:#Dozent
