Added showing if episodes need trimming

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -102,3 +102,5 @@ uploading#:#Hochladen...
 done_uploading#:#Hochladen erfolgreich
 upload_canceled#:#Hochladen abgebrochen
 cancel_upload#:#Hochladen abbrechen
+
+to_edit#:#Aufzeichnungen bereit zum schneiden
