--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -102,3 +102,5 @@ uploading#:#Uploading...
 done_uploading#:#Done uploading
 upload_canceled#:#Upload canceled
 cancel_upload#:#Cancel upload
+
+to_edit#:#Episodes ready to be trimmmed
