--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -103,4 +103,4 @@ done_uploading#:#Hochladen erfolgreich
 upload_canceled#:#Hochladen abgebrochen
 cancel_upload#:#Hochladen abbrechen
 
-to_edit#:#Aufzeichnungen bereit zum schneiden
+to_edit#:#Aufzeichnungen bereit zum Schneiden
