--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -104,3 +104,6 @@ upload_canceled#:#Upload canceled
 cancel_upload#:#Cancel upload
 
 to_edit#:#Episodes ready to be trimmmed
+
+no_such_method#:#No such method
+no_such_episode#:#No such Episode
