fixed typo in request_method

--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -107,3 +107,4 @@ to_edit#:#Aufzeichnungen bereit zum Schneiden
 
 no_such_method#:#Keine solche Methode
 no_such_episode#:#Keine solche Episode
+series#:#Serie
