--- a/lang/ilias_de.lang
+++ b/lang/ilias_de.lang
@@ -43,7 +43,8 @@ mh_server_engage#:#Basis-URL des Opencast Engage Server
 mh_digest_user#:#Benutzername des Opencast Digest User
 mh_digest_password#:#Passwort des Opencast Digest User
 mh_files_directory#:#Basisverzeichnis f&uuml;r Opencast Dateien
-xsendfile_basedir#:#Basisverzeichnis f&uuml;r XSendfile
+xsendfile_header#:#Header f&uuml;r XSendfile-Feature
+xsendfile_basedir#:#Basisverzeichnis f&uuml;r XSendfile-Feature
 opencast_version#:#Opencast-Version
 upload_workflow#:#Workflow zum Verarbeiten von Uploads
 saving_invoked#:#&Auml;nderungen erfolgreich gespeichert
