--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -42,7 +42,8 @@ mh_server#:#Base URL of the Opencast Server
 mh_server_engage#:#Base URL of the Opencast Engage Server
 mh_digest_user#:#Username of the Opencast Digest User
 mh_digest_password#:#Password of the Opencast Digest User
-xsendfile_basedir#:#Base directory for XSendfile
+xsendfile_header#:#Header for XSendfile-Feature
+xsendfile_basedir#:#Base directory for XSendfile-Feature
 mh_files_directory#:#Base directory for Opencast files
 opencast_version#:#Opencast Version
 upload_workflow#:#Workflow for processing uploaded files
