--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -44,7 +44,7 @@ mh_digest_user#:#Username of the Opencast Digest User
 mh_digest_password#:#Password of the Opencast Digest User
 xsendfile_header#:#Header for XSendfile-Feature
 upload_directory#:#Base directory for ilias uploads
-mh_files_directory#:#Base directory for Opencast files
+mh_directory#:#Base directory for Opencast (org.opencastproject.storage.dir)
 opencast_version#:#Opencast Version
 upload_workflow#:#Workflow for processing uploaded files
 saving_invoked#:#Save procedure has been executed
